--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1405,6 +1405,8 @@ pluto-input > button.delete_cell ul.input_context_menu {
 .delete_icon,
 .enable_cell_icon,
 .bandage_icon,
+.eye_open_icon,
+.eye_closed_icon,
 .icon {
     --size: 17px;
     width: var(--size);
@@ -1414,6 +1416,14 @@ pluto-input > button.delete_cell ul.input_context_menu {
     background-position: center;
     margin-right: calc(var(--size) / 3);
 }
+.eye_open_icon {
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/eye-outline.svg);
+}
+
+.eye_closed_icon {
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/eye-off-outline.svg);
+}
+
 .bandage_icon {
     filter: opacity(0.3);
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/bandage-outline.svg);
