--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1403,6 +1403,7 @@ pluto-input > button.delete_cell ul.input_context_menu {
 .delete_icon,
 .enable_cell_icon,
 .bandage_icon,
+.format_icon,
 .icon {
     --size: 17px;
     width: var(--size);
@@ -1418,6 +1419,9 @@ pluto-input > button.delete_cell ul.input_context_menu {
 }
 .enable_cell_icon {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/caret-forward-circle-outline.svg);
+}
+.format_icon {
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/color-wand-outline.svg);
 }
 
 .disable_cell_icon {
