--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -2048,7 +2048,7 @@ pluto-logs-container {
     /* Show logs up to the RunArea */
     max-height: calc(100% + 14px);
     position: absolute;
-    z-index: 30;
+    z-index: 25;
     right: min(-100px, -100vw + (700px + 25px));
     top: 1px;
     overflow-x: auto;
@@ -2087,14 +2087,14 @@ pluto-logs-container {
     pluto-logs-container:hover pluto-logs {
         /* grid-template-columns: repeat(auto-fill, 10px); */
     }
-
+    /* 
     pluto-log-dot-positioner {
         flex: 0 0 auto;
         width: auto;
     }
     pluto-log-dot-sizer {
         width: auto;
-    }
+    } */
 }
 
 @media screen and (min-width: calc(700px + 25px + 6px + 500px)) and (max-width: calc(700px + 25px + 6px + 500px + 500px)) {
