always show logs below cell

--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -2060,43 +2060,43 @@ pluto-logs-container {
     z-index: 25;
     right: min(-100px, -100vw + (700px + 25px));
     top: 1px;
-    /* overflow-x: auto; */
+    overflow-x: auto;
     /* overflow-y: hidden; */
     background: hsl(0deg 0% 100% / 81%);
 }
 
-@media screen and (max-width: calc(700px + 25px + 6px + 150px)) {
-    pluto-logs {
-        display: flex !important;
-    }
+/* @media screen and (max-width: calc(700px + 25px + 6px + 150px)) { */
+pluto-logs {
+    display: flex !important;
+}
 
-    pluto-logs-container {
-        position: static;
-        /* right: min(-6px, 700px + 25px - 100vw); */
-        /* width: 20px; */
-        /* transition: width ease-in-out 100ms; */
-        /* padding-left: 80px; */
-        width: 100%;
-    }
+pluto-logs-container {
+    position: static;
+    /* right: min(-6px, 700px + 25px - 100vw); */
+    /* width: 20px; */
+    /* transition: width ease-in-out 100ms; */
+    /* padding-left: 80px; */
+    width: 100%;
+}
 
-    pluto-logs-container:not(:empty) {
-        background: #efeff3;
-        padding: 10px;
-    }
+pluto-logs-container:not(:empty) {
+    background: #efeff3;
+    padding: 10px;
+}
 
-    pluto-logs-container:focus-within,
-    pluto-logs-container:hover {
-        /* width: 30vw; */
-    }
+pluto-logs-container:focus-within,
+pluto-logs-container:hover {
+    /* width: 30vw; */
+}
 
-    pluto-logs-container pluto-logs {
-        /* grid-template-columns: repeat(auto-fill, 0px); */
-    }
-    pluto-logs-container:focus-within pluto-logs,
-    pluto-logs-container:hover pluto-logs {
-        /* grid-template-columns: repeat(auto-fill, 10px); */
-    }
-    /* 
+pluto-logs-container pluto-logs {
+    /* grid-template-columns: repeat(auto-fill, 0px); */
+}
+pluto-logs-container:focus-within pluto-logs,
+pluto-logs-container:hover pluto-logs {
+    /* grid-template-columns: repeat(auto-fill, 10px); */
+}
+/* 
     pluto-log-dot-positioner {
         flex: 0 0 auto;
         width: auto;
@@ -2104,8 +2104,8 @@ pluto-logs-container {
     pluto-log-dot-sizer {
         width: auto;
     } */
-}
-
+/* } */
+/* 
 @media screen and (min-width: calc(700px + 25px + 6px + 500px)) and (max-width: calc(700px + 25px + 6px + 500px + 500px)) {
     pluto-logs-container {
         right: calc(-500px - 6px);
@@ -2117,7 +2117,7 @@ pluto-logs-container {
         width: calc(0.5 * (6px + 100vw - (700px + 25px)));
         right: calc(-0.5 * (6px + 100vw - (700px + 25px)));
     }
-}
+} */
 
 pluto-logs-container pluto-progress-bars pluto-progress:not(:first-child) {
     margin-top: 10px;
