--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -614,12 +614,14 @@ nav#at_the_top > pluto-filepicker button {
     cursor: pointer;
 }
 
+button.start_stop_recording,
 button.toggle_export {
     border: none;
     background: none;
     cursor: pointer;
     opacity: 0.5;
 }
+button.start_stop_recording span,
 button.toggle_export span {
     display: block;
     content: " " !important;
@@ -628,6 +630,12 @@ button.toggle_export span {
     width: 25px;
 }
 
+nav#at_the_top button.start_stop_recording span {
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/radio-button-on-outline.svg);
+}
+nav#at_the_top button.start_stop_recording.stop span {
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/stop-circle-outline.svg);
+}
 nav#at_the_top button.toggle_export span {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/shapes-outline.svg);
 }
@@ -1274,6 +1282,7 @@ pluto-input > button > span {
         transition: opacity 0.25s ease-in-out;
     }
     button.toggle_export,
+    button.start_stop_recording,
     pluto-cell:hover > button,
     pluto-cell:hover > pluto-input > button,
     pluto-cell > pluto-runarea > button,
@@ -1282,6 +1291,7 @@ pluto-input > button > span {
         transition: opacity 0.25s ease-in-out;
     }
     button.toggle_export:hover,
+    button.start_stop_recording:hover,
     preamble button:hover,
     pluto-cell > button:hover,
     pluto-cell > pluto-input > button:hover,
