--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -18,6 +18,8 @@
 @import url("https://cdn.jsdelivr.net/npm/@fontsource/lato@4.4.5/400.css");
 @import url("https://cdn.jsdelivr.net/npm/@fontsource/lato@4.4.5/400-italic.css");
 
+@import url("colors.css");
+
 /* VARIABLES */
 
 :root {
@@ -46,6 +48,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: var(--main-bg-color);
 }
 
 main {
@@ -96,7 +99,7 @@ pluto-output {
     font-family: "Alegreya Sans", sans-serif;
     font-size: 1em;
     font-weight: 400;
-    color: hsl(0, 0%, 25%);
+    color: var(--pluto-output-color);
 }
 
 pluto-output h1,
@@ -108,7 +111,7 @@ pluto-output h6 {
     font-family: "Vollkorn", serif;
     font-feature-settings: "lnum", "pnum";
     font-weight: 600;
-    color: hsl(0, 0%, 12%);
+    color: var(--pluto-output-h-color);
     margin-block-start: 1rem;
     margin-block-end: 0rem;
 }
@@ -126,13 +129,13 @@ pluto-output h2:first-child {
 
 pluto-output h1 {
     font-size: 2.2rem;
-    border-bottom: 3px solid rgba(0, 0, 0, 0.15);
+    border-bottom: 3px solid var(--rule-color);
     margin-bottom: 0.5rem;
 }
 
 pluto-output h2 {
     font-size: 1.8rem;
-    border-bottom: 2px dotted rgba(0, 0, 0, 0.15);
+    border-bottom: 2px dotted var(--rule-color);
     margin-bottom: 0.5rem;
 }
 
@@ -193,7 +196,7 @@ pluto-output video {
 }
 
 a {
-    color: black;
+    color: var(--atag-color);
     font-weight: bold;
 }
 
@@ -214,7 +217,7 @@ pluto-output pre > code {
 pluto-output.rich_output code {
     padding: 3px;
     border-radius: 8px;
-    background-color: #f2f2f2;
+    background-color: var(--pluto-output-bg-color);
 }
 pluto-output.rich_output pre > code {
     padding: 0px;
@@ -239,7 +242,7 @@ pluto-display pre {
 
 pluto-output hr {
     border: none;
-    border-top: 3px solid rgba(0, 0, 0, 0.15);
+    border-top: 3px solid var(--rule-color);
     margin-left: 0;
     margin-right: 0;
 }
@@ -257,8 +260,8 @@ pluto-output blockquote {
     padding: 15px;
 
     border-radius: 15px;
-    background-color: #f2f2f2;
-    color: #555;
+    background-color: var(--pluto-output-bg-color);
+    color: var(--blockquote-color);
 }
 pluto-output.rich_output pre:not(.no-block):last-child,
 pluto-output blockquote:last-child {
@@ -286,37 +289,37 @@ pluto-output div.admonition .admonition-title ~ * {
 }
 
 pluto-output div.admonition {
-    background: rgba(68, 149, 28, 0.2);
-    border: 5px solid rgb(158, 200, 137);
+    background: var(--admonition-bg-color);
+    border: 5px solid var(--admonition-focus-color);
 }
 pluto-output div.admonition .admonition-title {
-    background: rgb(158, 200, 137);
+    background: var(--admonition-focus-color);
     margin: -1px; /* Fixes a rendering glitch in Chrome */
 }
 pluto-output div.admonition.note,
 pluto-output div.admonition.info,
 pluto-output div.admonition.hint {
-    background: rgba(50, 115, 200, 0.2);
-    border: 5px solid rgb(148, 182, 226);
+    background: var(--admonition-note-main-color);
+    border: 5px solid var(--admonition-note-focus-color);
 }
 pluto-output div.admonition.note .admonition-title,
 pluto-output div.admonition.info .admonition-title,
 pluto-output div.admonition.hint .admonition-title {
-    background: rgb(148, 182, 226);
+    background: var(--admonition-note-focus-color);
 }
 pluto-output div.admonition.warning {
-    background: rgba(162, 148, 30, 0.2);
-    border: 5px solid rgb(207, 199, 138);
+    background: var(--admonition-warn-main-color);
+    border: 5px solid var(--admonition-warn-focus-color);
 }
 pluto-output div.admonition.warning .admonition-title {
-    background: rgb(207, 199, 138);
+    background: var(--admonition-warn-focus-color);
 }
 pluto-output div.admonition.danger {
-    background: rgba(200, 67, 50, 0.2);
-    border: 5px solid rgb(226, 157, 148);
+    background: var(--admonition-danger-main-color);
+    border: 5px solid var(--admonition-danger-focus-color);
 }
 pluto-output div.admonition.danger .admonition-title {
-    background: rgb(226, 157, 148);
+    background: var(--admonition-danger-focus-color);
 }
 
 pluto-output div.admonition.hint .admonition-title ~ * {
@@ -351,7 +354,7 @@ pluto-output div.footnote p.footnote-title {
 pluto-output div.footnote p.footnote-title ~ * {
     margin-left: 0.1em;
     padding-left: 0.4em;
-    border-left: 5px solid rgba(23, 115, 119, 0.15);
+    border-left: 5px solid var(--footnote-border-color);
     padding-bottom: var(--pluto-cell-spacing);
     margin-block-end: 0px;
 }
@@ -367,7 +370,7 @@ pluto-output.scroll_y {
 
 pluto-output table {
     border-collapse: collapse;
-    border: 2px solid rgba(0, 0, 0, 0.2);
+    border: 2px solid var(--table-border-color);
     border-left: none;
     border-right: none;
     margin: 0 auto;
@@ -376,7 +379,7 @@ pluto-output table {
 }
 
 pluto-output table > thead {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid var(--table-border-color);
 }
 
 pluto-output table > tbody td {
@@ -394,7 +397,7 @@ pluto-output table th {
 }
 
 pluto-output table > tbody tr:hover {
-    background-color: rgba(224, 203, 158, 0.15);
+    background-color: var(--table-bg-hover-color);
 }
 pluto-output table pre {
     white-space: pre;
@@ -405,7 +408,7 @@ kbd {
     font-family: "Space Mono", monospace;
     font-size: 0.7rem;
     letter-spacing: -0.7px;
-    border: 1px solid #dfdfdf;
+    border: 1px solid var(--kbd-border-color);
     padding: 0px 2px;
     border-radius: 3px;
 }
@@ -423,10 +426,10 @@ body > header {
     width: 100%;
     min-height: 60px;
     z-index: 50;
-    background-color: white;
+    background-color: var(--main-bg-color);
     transform: translateY(0px);
     transition: background-color 0.5s ease-in-out, transform 0.25s cubic-bezier(0.18, 0.89, 0.49, 1.13);
-    border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+    border-bottom: solid 1px var(--header-border-color);
     font-family: "Roboto Mono", monospace;
     font-weight: 400;
     font-size: 0.75rem;
@@ -443,8 +446,8 @@ aside#export {
     top: 0;
     width: 100%;
     height: 130px;
-    background: rgb(60, 67, 101);
-    color: rgba(255, 255, 255, 0.7);
+    background: var(--export-bg-color);
+    color: var(--export-color);
     transform: translateY(-101%);
 }
 aside#export::before {
@@ -477,10 +480,10 @@ a.export_card {
     height: 90px;
 
     border: 5px solid transparent;
-    background: rgba(255, 255, 255, 0.8);
+    background: var(--export-card-bg-color);
     border-radius: 8px;
-    color: rgba(0, 0, 0, 0.7);
-    box-shadow: 0px 2px 10px #00000029;
+    color: var(--export-card-title-color);
+    box-shadow: 0px 2px 10px var(--export-card-shadow-color);
     text-decoration: none;
 }
 div.export_title {
@@ -504,7 +507,7 @@ a.export_card header {
     font-size: 1rem;
 }
 a.export_card section {
-    color: rgba(0, 0, 0, 0.5);
+    color: var(--export-card-text-color);
     font-weight: 500;
 }
 aside#export button.toggle_export {
@@ -516,7 +519,7 @@ body.static_preview button.toggle_export {
 }
 
 nav#at_the_top h1 {
-    color: black;
+    color: var(--nav-h1-text-color);
     letter-spacing: 2px;
 }
 
@@ -595,8 +598,8 @@ nav#at_the_top > pluto-filepicker .cm-editor {
     font-size: 0.8rem;
     letter-spacing: 1px;
     background: none;
-    color: #6f6f6f;
-    border: 2px solid #b2b2b2;
+    color: var(--nav-filepicker-color);
+    border: 2px solid var(--nav-filepicker-border-color);
     border-radius: 3px;
     border-right: none;
     border-top-right-radius: 0;
@@ -667,7 +670,7 @@ nav#at_the_top:after {
     }
     header:hover > nav#at_the_top > pluto-filepicker .cm-editor,
     header:focus-within > nav#at_the_top > pluto-filepicker .cm-editor {
-        border: 2px solid #b2b2b2;
+        border: 2px solid var(--nav-filepicker-border-color);
         border-right: none;
     }
     header:hover > nav#at_the_top > pluto-filepicker button,
@@ -699,22 +702,22 @@ body.disconnected > header {
 }
 
 body.nbpkg_restart_recommended > header {
-    background-color: rgba(114, 192, 255, 0.56);
+    background-color: var(--restart-recc-header-color);
 }
 body.nbpkg_restart_required > header {
-    background-color: rgba(170, 41, 32, 0.56);
+    background-color: var(--restart-req-header-color);
 }
 body.process_dead > header {
-    background-color: rgb(230 88 46 / 38%);
+    background-color: var(--dead-process-header-color);
 }
 body.loading > header {
-    background-color: hsla(290, 10%, 80%, 0.5);
+    background-color: var(--loading-header-color);
 }
 body.disconnected > header {
-    background-color: rgba(255, 169, 114, 0.56);
+    background-color: var(--disconnected-header-color);
 }
 body.binder.loading > header {
-    background-color: hsl(51deg 64% 90% / 50%);
+    background-color: var(--binder-loading-header-color);
 }
 
 nav#at_the_top > #process_status {
@@ -722,7 +725,7 @@ nav#at_the_top > #process_status {
     font-weight: 500;
     padding: 5px 10px;
     margin: 5px;
-    background: white;
+    background: var(--nav-process-status-bg-color);
     border-radius: 10px;
     z-index: 10;
     margin-left: 1em;
@@ -736,7 +739,7 @@ loading-bar {
     height: 6px;
     width: 10vw;
     /* background-color: #b1c9dd; */
-    background: linear-gradient(90deg, #f1dba9, #d7d7d0, #f1dba9);
+    background: linear-gradient(90deg, var(--loading-grad-color-1), var(--loading-grad-color-2), var(--loading-grad-color-1));
     background-size: 100vw 100%;
     position: fixed;
     top: 0px;
@@ -787,9 +790,9 @@ main > preamble #saveall-container {
     pointer-events: all;
     right: min(0px, 700px + 25px - 100vw);
     position: relative;
-    background: #ffffff;
+    background: var(--saveall-bg-color);
     padding: 5px 8px;
-    border: 3px solid #e3e3e3;
+    border: 3px solid var(--saveall-border-color);
     border-radius: 12px;
     height: 35px;
     font-family: "Segoe UI Emoji", "Roboto Mono", monospace;
@@ -863,7 +866,7 @@ pluto-output {
     align-items: baseline;
     overflow-x: auto;
 
-    background-color: white;
+    background-color: var(--pluto-output-bg-color);
 }
 
 pluto-cell.depends_on_disabled_cells > pluto-output,
@@ -872,7 +875,7 @@ pluto-cell.running_disabled > pluto-output {
 }
 
 pluto-cell.running_disabled > pluto-output {
-    background-color: rgba(139, 139, 139, 0.25);
+    background-color: var(--disabled-cell-bg-color);
 }
 
 .scroll_y {
@@ -927,7 +930,7 @@ pluto-display > div {
 /* SELECTION */
 
 pluto-cell.selected {
-    background: rgba(40, 78, 189, 0.24);
+    background: var(--selected-cell-bg-color);
     border-radius: 0 3px 3px 0;
 }
 
@@ -951,7 +954,7 @@ pluto-output > div {
 }
 
 pluto-cell:hover > pluto-output > div {
-    scrollbar-color: rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.05);
+    scrollbar-color: var(--hover-scrollbar-color-1) var(--hover-scrollbar-color-2);
 }
 
 /* SCROLLBAR CHROME */
@@ -966,11 +969,11 @@ pluto-output > div::-webkit-scrollbar-thumb {
 }
 
 pluto-cell:hover > pluto-output > div::-webkit-scrollbar {
-    background: rgba(0, 0, 0, 0.05);
+    background: var(--hover-scrollbar-color-2);
 }
 
 pluto-cell:hover > pluto-output > div::-webkit-scrollbar-thumb {
-    background: rgba(0, 0, 0, 0.15);
+    background: var(--hover-scrollbar-color-1);
 }
 
 /* CELL INPUT */
@@ -978,7 +981,7 @@ pluto-cell:hover > pluto-output > div::-webkit-scrollbar-thumb {
 pluto-input .cm-editor {
     z-index: 20;
     border-bottom-right-radius: 4px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    border: 1px solid var(--normal-cell-color);
     border-left: none;
     transition: border 0.15s ease-in-out;
 
@@ -996,7 +999,7 @@ pluto-cell:not(.show_input) > pluto-input {
 }
 
 pluto-cell.code_differs > pluto-input > .cm-editor {
-    border: 1px solid hsla(46, 70%, 37%, 0.68);
+    border: 1px solid var(--code-differs-cell-color);
     border-left: none;
 }
 
@@ -1006,7 +1009,7 @@ pluto-cell.running_disabled > pluto-input .cm-editor {
 }
 
 pluto-cell.running_disabled > pluto-input .cm-editor {
-    background-color: rgba(139, 139, 139, 0.25);
+    background-color: var(--disabled-cell-bg-color);
 }
 
 /* UI */
@@ -1053,7 +1056,7 @@ pluto-shoulder {
 }
 
 pluto-shoulder:hover {
-    background: rgba(0, 0, 0, 0.05);
+    background: var(--shoulder-hover-bg-color);
     background-clip: padding-box;
 }
 
@@ -1098,8 +1101,8 @@ pluto-trafficlight {
     pointer-events: none;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
-    border-left-color: rgba(0, 0, 0, 0.1);
-    background: rgba(0, 0, 0, 0.1);
+    border-left-color: var(--normal-cell-color);
+    background: var(--normal-cell-color);
     overflow: hidden;
 }
 
@@ -1131,7 +1134,7 @@ body:not(.___) pluto-cell.code_folded > pluto-trafficlight {
 
 @media screen and (any-pointer: fine) {
     body:not(.disable_ui) pluto-cell:hover > pluto-trafficlight {
-        background: rgba(0, 0, 0, 0.1);
+        background: var(--normal-cell-color);
         transition: background 0.05s ease-in;
     }
 }
@@ -1141,29 +1144,35 @@ body:not(.___) pluto-cell:focus-within > pluto-trafficlight {
     border-left-style: solid;
     margin-left: -4px;
     background-clip: padding-box;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: var(--normal-cell-color);
 }
 
 body:not(.___) pluto-cell.selected > pluto-trafficlight {
-    background: rgba(40, 78, 189, 0.4);
-    border-left-color: rgba(40, 78, 189, 0.4);
+    background: var(--selected-cell-color);
+    border-left-color: var(--selected-cell-color);
     background-clip: padding-box;
 }
 
 body:not(.___) pluto-cell.code_differs > pluto-trafficlight {
-    background: hsla(46, 70%, 37%, 0.68);
-    border-left-color: hsla(46, 70%, 37%, 0.68);
+    background: var(--code-differs-cell-color);
+    border-left-color: var(--code-differs-cell-color);
     background-clip: padding-box;
 }
 
 body:not(.___) pluto-cell.errored > pluto-trafficlight {
-    background: hsla(0, 70%, 80%, 0.7);
-    border-left-color: hsla(0, 70%, 80%, 0.7);
+    background: var(--error-cell-color);
+    border-left-color: var(--error-cell-color);
     background-clip: padding-box;
 }
 
 body:not(.___) pluto-cell.queued > pluto-trafficlight::after {
-    background: repeating-linear-gradient(-45deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 8px, rgba(0, 0, 0, 0.1) 8px, rgba(0, 0, 0, 0.1) 16px);
+    background: repeating-linear-gradient(
+        -45deg, 
+        rgba(0, 0, 0, 0), 
+        rgba(0, 0, 0, 0) 8px, 
+        var(--normal-cell-color) 8px, 
+        var(--normal-cell-color) 16px
+    );
     background-clip: padding-box;
     /* [1]
     Queued, Running, Errored are really fast changing props.
@@ -1178,7 +1187,13 @@ body:not(.___) pluto-cell.queued > pluto-trafficlight::after {
 }
 
 body:not(.___) pluto-cell.running > pluto-trafficlight::after {
-    background: repeating-linear-gradient(-45deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 8px, rgba(0, 0, 0, 0.2) 8px, rgba(0, 0, 0, 0.2) 16px);
+    background: repeating-linear-gradient(
+        -45deg,
+        var(--normal-cell-color), 
+        var(--normal-cell-color) 8px, 
+        var(--dark-normal-cell-color) 8px, 
+        var(--dark-normal-cell-color) 16px
+    );
     background-clip: content-box;
     opacity: 0.99; /* [1] */
     background-size: 4px var(--patternHeight);
@@ -1187,10 +1202,10 @@ body:not(.___) pluto-cell.running > pluto-trafficlight::after {
 body:not(.___) pluto-cell.queued.errored > pluto-trafficlight::after {
     background: repeating-linear-gradient(
         -45deg,
-        hsla(0, 70%, 80%, 0.7),
-        hsla(0, 70%, 80%, 0.7) 8px,
-        hsla(0, 70%, 80%, 0.05) 8px,
-        hsla(0, 70%, 80%, 0.05) 16px
+        var(--error-cell-color),
+        var(--error-cell-color) 8px,
+        var(--light-error-cell-color) 8px,
+        var(--light-error-cell-color) 16px
     );
     background-clip: content-box;
     opacity: 0.99; /* [1] */
@@ -1198,7 +1213,13 @@ body:not(.___) pluto-cell.queued.errored > pluto-trafficlight::after {
 }
 
 body:not(.___) pluto-cell.running.errored > pluto-trafficlight::after {
-    background: repeating-linear-gradient(-45deg, hsla(0, 100%, 80%, 1), hsla(0, 100%, 80%, 1) 8px, hsla(0, 70%, 80%, 0.7) 8px, hsla(0, 70%, 80%, 0.7) 16px);
+    background: repeating-linear-gradient(
+        -45deg, 
+        var(--bright-error-cell-color), 
+        var(--bright-error-cell-color) 8px, 
+        var(--error-cell-color) 8px, 
+        var(--error-cell-color) 16px
+    );
     background-clip: content-box;
     opacity: 0.99; /* [1] */
     background-size: 4px var(--patternHeight); /* 16 * sqrt(2) */
@@ -1206,11 +1227,11 @@ body:not(.___) pluto-cell.running.errored > pluto-trafficlight::after {
 
 pluto-cell.depends_on_disabled_cells > pluto-trafficlight,
 pluto-cell.running_disabled > pluto-trafficlight {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(255, 0, 0);
 }
 
 pluto-cell.running_disabled:not(.asjkdhf) > pluto-trafficlight {
-    background-color: rgba(139, 139, 139, 0.25);
+    background-color: var(--disabled-cell-bg-color);
     opacity: 0.3;
 }
 
@@ -1230,19 +1251,19 @@ pluto-cell.drop_target pluto-input::after {
     justify-content: center;
     font: 16px var(--sans-serif-font-stack);
     z-index: 20;
-    background-color: rgba(255, 255, 255, 0.75);
+    background-color: var(--drop-target-bg-color);
     content: "+ Drop file here";
 }
 
 pluto-cell.drop_target.saving_file pluto-input::after {
     content: "The 💾 File you dropped is being saved... ";
-    color: white;
-    background-color: rgba(3, 92, 151, 0.75);
+    color: var(--drop-target-saving-file-color);
+    background-color: var(--drop-target-saving-file-bg-color);
 }
 
 pluto-cell.drop_target.drop_invalid pluto-input::after {
-    background-color: #ece5e5bf;
-    color: rgba(0, 0, 0, 0.85);
+    background-color: var(--drop-invalid-bg-color);
+    color: var(--drop-invalid-color);
     content: "Try dropping your file in an empty cell!";
 }
 
@@ -1361,8 +1382,8 @@ pluto-input > button.input_context_menu ul {
     border-radius: 6px;
     display: block;
     position: absolute;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: white;
+    border: 1px solid var(--input-context-menu-border-color);
+    background-color: var(--input-context-menu-bg-color);
 }
 @media screen and (min-width: 921px) {
     pluto-input > button.input_context_menu ul {
@@ -1403,17 +1424,17 @@ pluto-input > button.input_context_menu ul {
 }
 
 .input_context_menu li.coming_soon {
-    color: #55555544;
+    color: var(--input-context-menu-soon-color);
 }
 .input_context_menu li.coming_soon:hover {
     cursor: not-allowed;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: var(--input-context-menu-hover-bg-color);
 }
 
 .input_context_menu li:hover {
     transition-property: background-color;
     transition-duration: 200ms;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: var(--input-context-menu-hover-bg-color);
 }
 
 .disable_cell_icon,
@@ -1532,8 +1553,8 @@ pkg-status-mark select {
 }
 
 pkg-status-mark option {
-    background: #d3752538;
-    color: #00000060;
+    background: var(--pkg-status-bg-color);
+    color: var(--pkg-status-color);
 }
 pkg-status-mark option.installed {
     background: unset;
